--- a/Resources/Private/Templates/Backend/CourseBackend/List.html
+++ b/Resources/Private/Templates/Backend/CourseBackend/List.html
@@ -1,4 +1,4 @@
-<f:layout name="Course" />
+<f:layout name="Default" />
 <f:section name="content">
 	<f:comment>
 		<f:debug title="demand">{demand}</f:debug>
