--- a/Resources/Private/Partials/Backend/Common/SearchForm.html
+++ b/Resources/Private/Partials/Backend/Common/SearchForm.html
@@ -11,15 +11,17 @@
 		</f:if>
 
 		<f:comment>period</f:comment>
-		<f:form.select
-			id="tx_t3eventsQuickMenue"
-			name="overwriteDemand[period]"
-			options="{filterOptions.periods}"
-			optionValueField="key"
-			optionLabelField="value"
-			prependOptionLabel="{f:translate(key: 'label.allPeriod')}"
-			value="{overwriteDemand.period}"
-			/>
+		<f:if condition="{filterOptions.periods}">
+			<f:form.select
+				id="tx_t3eventsQuickMenue"
+				name="overwriteDemand[period]"
+				options="{filterOptions.periods}"
+				optionValueField="key"
+				optionLabelField="value"
+				prependOptionLabel="{f:translate(key: 'label.allPeriod')}"
+				value="{overwriteDemand.period}"
+				/>
+		</f:if>
 
 		<f:comment>genres</f:comment>
 		<f:if condition="{filterOptions.genres}">
@@ -42,7 +44,7 @@
 				options="{filterOptions.venues}"
 				optionValueField="uid"
 				optionLabelField="title"
-				prependOptionLabel="{f:translate(key: 'label.allVenues')}"
+				prependOptionLabel="{f:translate(key: 'label.allVenues', default: 'label.allVenues')}"
 				value="{overwriteDemand.venues}"
 				/>
 		</f:if>
