--- a/Resources/Private/Partials/Backend/Common/SearchSubject.html
+++ b/Resources/Private/Partials/Backend/Common/SearchSubject.html
@@ -1,11 +1,13 @@
-<div class="field input">
-	<label for="search-field-subject">
+<div class="form-section">
+	<label for="tx_t3eventsQuickMenue-subject">
 		{f:translate(
-			key: 'label.search.field.subject',
-			default: 'label.search.field.subject')}
+		key: 'label.search.field.subject',
+		default: 'label.search.field.subject')}
 	</label>
 	<f:form.textfield
+		class="form-control"
+		id="tx_t3eventsQuickMenue-subject"
 		name="overwriteDemand[search][subject]"
 		value="{overwriteDemand.search.subject}"
-		id="search-field-subject"/>
+		/>
 </div>
