--- a/Resources/Private/Templates/Backend/CourseBackend/List.html
+++ b/Resources/Private/Templates/Backend/CourseBackend/List.html
@@ -1,3 +1,4 @@
+{namespace ts=Webfox\T3events\ViewHelpers}
 <f:layout name="Default" />
 <f:section name="content">
 	<f:comment>
@@ -6,48 +7,79 @@
 		<f:debug title="courses">{courses}</f:debug>
 	</f:comment>
 
-	<h1>
-		<f:translate key="tx_dakosy_reservations_domain_model_course"></f:translate>
-	</h1>
+	<h1>{f:translate(key: 'label.courses', default: 'Courses')}</h1>
 	<f:render partial="Backend/Common/SearchForm"
-		arguments="{demand: '{demand}', overwriteDemand: '{overwriteDemand}', filterOptions: filterOptions, showSubjectField: '{settings.courseBackend.search.showSubjectField}'}"/>
+		arguments="{demand: '{demand}', overwriteDemand: '{overwriteDemand}', filterOptions: filterOptions, showSubjectField: '{settings.courseBackend.search.showSubjectField}'}" />
 	<f:flashMessages renderMode="div" />
 	<f:if condition="{courses}">
 		<f:then>
-			<div class="list">
-				<table class="typo3-dblist tx-dakosy-seminars">
-					<tr class="c-headline">
-						<td>ID</td>
-						<td class="col-title">Titel</td>
-						<td>Art</td>
-						<td>Produkt</td>
-						<td>Zielgruppe</td>
-					</tr>
-					<f:be.widget.paginate
-						objects="{courses}"
-						as="paginatedCourses"
-						configuration="{itemsPerPage: 10, maximumNumberOfLinks: 10, recordsLabel: 'Termin'}"
-						>
+			<f:be.widget.paginate
+				objects="{courses}"
+				as="paginatedCourses"
+				configuration="{itemsPerPage: 10, maximumNumberOfLinks: 10, recordsLabel: 'Termin'}"
+				>
+				<div class="panel panel-space panel-default recordlist">
+					<table class="table table-striped table-hover typo3-dblist">
+						<thead>
+						<tr class="c-headline">
+							<th class="col-icon">ID</th>
+							<th class="col-title">{f:translate(key: 'label.title', default: 'Title')}</th>
+							<th class="col-control"></th>
+							<th>{f:translate(key: 'label.eventType', default: 'Event Type')}</th>
+							<th>{f:translate(key: 'label.genres', default: 'Genres')}</th>
+							<th>{f:translate(key: 'label.audience', default: 'Audience')}</th>
+						</tr>
+						</thead>
 						<f:for each="{paginatedCourses}" as="course">
 							<tr class="db_list_normal">
-								<td>{course.uid}</td>
-								<td>
-									<a href="" title="edit course" onclick="window.location.href='alt_doc.php?returnUrl='+T3_THIS_LOCATION+'&edit[tx_t3events_domain_model_event][{course.uid}]=edit'; return false;">
-										{course.headline}
-									</a>
+								<td nowrap="nowrap">{course.uid}</td>
+								<td nowrap="nowrap">
+									<f:if condition="{f:cObject(typoscriptObjectPath: 'lib.compatVersion76')}">
+										<f:then>
+											<a href="#" class="t3-js-clickmenutrigger" data-table="tx_t3events_domain_model_event" data-uid="{course.uid}" data-listframe="0">
+												{course.headline}
+											</a>
+										</f:then>
+										<f:else>
+											<a href="" title="edit" onclick="window.location.href='alt_doc.php?returnUrl='+T3_THIS_LOCATION+'&edit[tx_t3events_domain_model_event][{course.uid}]=edit'; return false;">
+												{course.headline}
+											</a>
+										</f:else>
+									</f:if>
 								</td>
-								<td>{course.eventType.title}</td>
-								<td>
+								<td nowrap="nowrap" class="col-control">
+									<f:if condition="{f:cObject(typoscriptObjectPath: 'lib.compatVersion76')}">
+										<f:then>
+											<div
+												class="btn btn-default">
+												<f:be.buttons.icon
+													icon="actions-open"
+													title="UID: {course.uid}"
+													uri="{ts:be.editRecord(parameters:'edit[tx_t3events_domain_model_event][{course.uid}]=edit')}"
+													/>
+											</div>
+										</f:then>
+										<f:else>
+											<a href=""
+												onclick="window.location.href='alt_doc.php?returnUrl='+T3_THIS_LOCATION+'&edit[tx_t3events_domain_model_event][{course.uid}]=edit'; return false;">
+												<f:be.buttons.icon icon="actions-document-open" />
+											</a>
+
+										</f:else>
+									</f:if>
+								</td>
+								<td nowrap="nowrap">{course.eventType.title}</td>
+								<td nowrap="nowrap">
 									<f:for each="{course.genre}" as="genre" iteration="genreIteration">{genre.title}{f:if(condition: '{genreIteration.isLast}', else: ', ')}</f:for>
 								</td>
-								<td>
+								<td nowrap="nowrap">
 									<f:for each="{course.audience}" as="audience" iteration="audienceIteration">{audience.title}{f:if(condition: '{audienceIteration.isLast}', else: ', ')}</f:for>
 								</td>
 							</tr>
 						</f:for>
-					</f:be.widget.paginate>
-				</table>
-			</div>
+					</table>
+				</div>
+			</f:be.widget.paginate>
 		</f:then>
 	</f:if>
 </f:section>
