--- a/Resources/Private/Templates/Backend/ScheduleBackend/List.html
+++ b/Resources/Private/Templates/Backend/ScheduleBackend/List.html
@@ -1,52 +1,78 @@
+{namespace ts=Webfox\T3events\ViewHelpers}
 <f:layout name="Lessons" />
 <f:section name="content">
 	<f:comment>
 		<f:debug inline="true">{lessons}</f:debug>
 	</f:comment>
-	<h1>Termine</h1>
+	<h1>{f:translate(key: 'header.lessons', default: 'Lessons')}</h1>
 	<f:flashMessages renderMode="div" />
 	<f:if condition="{lessons}">
 		<f:then>
-			<div class="list">
-				<table class="typo3-dblist tx-dakosy-seminars">
-					<tr class="c-headline">
-						<td>Datum</td>
-						<td class="col-title">Schulung</td>
-						<td>Ort</td>
-						<td>Art</td>
-						<td>Status</td>
-						<td>Teilnehmer</td>
-						<td>Plätze</td>
-						<td>Anmeldeschluss</td>
-					</tr>
-					<f:be.widget.paginate
-						objects="{lessons}"
-						as="paginatedLessons"
-						configuration="{itemsPerPage: 10, maximumNumberOfLinks: 10, recordsLabel: 'Termin'}"
-						>
+			<f:be.widget.paginate
+				objects="{lessons}"
+				as="paginatedLessons"
+				configuration="{itemsPerPage: 10, maximumNumberOfLinks: 10, recordsLabel: '{f:translate(key: \'label.lesson\', default: \'Lesson\')}'}"
+				>
+				<div class="panel panel-space panel-default recordlist">
+					<table class="table table-striped table-hover typo3-dblist ">
+						<tr class="c-headline">
+							<th class="col-icon">ID</th>
+							<th>{f:translate(key: 'label.date', default: 'Date')}</th>
+							<th class="col-title">{f:translate(key: 'label.course', default: 'Course')}</th>
+							<th class="col-control"></th>
+							<th>{f:translate(key: 'label.eventLocation', default: 'Location')}</th>
+							<th>{f:translate(key: 'label.eventType', default: 'Event Type')}</th>
+							<th>{f:translate(key: 'label.status', default: 'Status')}</th>
+						</tr>
 						<f:for each="{paginatedLessons}" as="lesson">
 							<tr class="db_list_normal">
-								<td>
+								<td nowrap="nowrap">{lesson.uid}</td>
+								<td nowrap="nowrap">
 									<f:format.date format="d.m.Y">{lesson.date}</f:format.date>
 								</td>
-								<td>
-									<a href="" title="Termin bearbeiten" onclick="window.location.href='alt_doc.php?returnUrl='+T3_THIS_LOCATION+'&edit[tx_t3events_domain_model_performance][{lesson.uid}]=edit'; return false;">
-										{lesson.event.headline}
-									</a>
+								<td nowrap="nowrap">
+									<f:if condition="{f:cObject(typoscriptObjectPath: 'lib.compatVersion76')}">
+										<f:then>
+											<a href="#" class="t3-js-clickmenutrigger" data-table="tx_t3events_domain_model_performance" data-uid="{lesson.uid}" data-listframe="0">
+												{lesson.event.headline}
+											</a>
+										</f:then>
+										<f:else>
+											<a href="" title="edit" onclick="window.location.href='alt_doc.php?returnUrl='+T3_THIS_LOCATION+'&edit[tx_t3events_domain_model_performance][{lesson.uid}]=edit'; return false;">
+												{lesson.event.headline}
+											</a>
+										</f:else>
+									</f:if>
 								</td>
-								<td>{lesson.eventLocation.name}</td>
-								<td>{lesson.event.eventType.title}</td>
-								<td>{lesson.status.title}</td>
-								<td>{lesson.participants->f:count()}</td>
-								<td>{lesson.places}</td>
-								<td>
-									<f:format.date format="d.m.Y">{lesson.deadline}</f:format.date>
+								<td nowrap="nowrap" class="col-control">
+									<f:if condition="{f:cObject(typoscriptObjectPath: 'lib.compatVersion76')}">
+										<f:then>
+											<div
+												class="btn btn-default">
+												<f:be.buttons.icon
+													icon="actions-open"
+													title="UID: {lesson.uid}"
+													uri="{ts:be.editRecord(parameters:'edit[tx_t3events_domain_model_performance][{lesson.uid}]=edit')}"
+													/>
+											</div>
+										</f:then>
+										<f:else>
+											<a href=""
+												onclick="window.location.href='alt_doc.php?returnUrl='+T3_THIS_LOCATION+'&edit[tx_t3events_domain_model_performance][{lesson.uid}]=edit'; return false;">
+												<f:be.buttons.icon icon="actions-document-open" />
+											</a>
+
+										</f:else>
+									</f:if>
 								</td>
+								<td nowrap="nowrap">{lesson.eventLocation.name}</td>
+								<td nowrap="nowrap">{lesson.event.eventType.title}</td>
+								<td nowrap="nowrap">{lesson.status.title}</td>
 							</tr>
 						</f:for>
-					</f:be.widget.paginate>
-				</table>
-			</div>
+					</table>
+				</div>
+			</f:be.widget.paginate>
 		</f:then>
 	</f:if>
 
