[TASK] Default backend layout now renders header buttons. 'Create'-button added to list template for for course module

--- a/Resources/Private/Layouts/Backend/Default.html
+++ b/Resources/Private/Layouts/Backend/Default.html
@@ -4,6 +4,7 @@
 		<div id="typo3-docheader">
 			<div class="typo3-docheader-functions">
 				<div class="left">
+					<f:render section="headerButtons" />
 				</div>
 				<div class="right">
 					<f:be.pagePath />
