--- a/Resources/Private/Templates/Backend/CourseBackend/List.html
+++ b/Resources/Private/Templates/Backend/CourseBackend/List.html
@@ -1,3 +1,4 @@
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xmlns:f="http://xsd.helmut-hummel.de/ns/TYPO3/CMS/Fluid/ViewHelpers">
 {namespace ts=Webfox\T3events\ViewHelpers}
 <f:layout name="Default" />
 <f:section name="content">
@@ -7,16 +8,20 @@
 		<f:debug title="courses">{courses}</f:debug>
 	</f:comment>
 
-	<h1>{f:translate(key: 'label.courses', default: 'Courses')}</h1>
-	<f:render partial="Backend/Common/SearchForm"
+	<h1>{f:translate(key: 'header.courses')}</h1>
+
+    <f:comment>Search form</f:comment>
+    <f:render partial="Backend/Common/SearchForm"
 		arguments="{demand: '{demand}', overwriteDemand: '{overwriteDemand}', filterOptions: filterOptions, showSubjectField: '{settings.courseBackend.search.showSubjectField}'}" />
 	<f:flashMessages renderMode="div" />
-	<f:if condition="{courses}">
+
+    <f:comment>Paginated list</f:comment>
+    <f:if condition="{courses}">
 		<f:then>
 			<f:be.widget.paginate
 				objects="{courses}"
 				as="paginatedCourses"
-				configuration="{itemsPerPage: 10, maximumNumberOfLinks: 10, recordsLabel: 'Termin'}"
+				configuration="{settings.courseBackend.list.paginate}"
 				>
 				<div class="panel panel-space panel-default recordlist">
 					<table class="table table-striped table-hover typo3-dblist">
@@ -84,6 +89,7 @@
 	</f:if>
 </f:section>
 
+<f:comment>Header buttons</f:comment>
 <f:section name="headerButtons">
 	<f:be.buttons.icon uri="#"
 					   additionalAttributes="{onclick: 'window.location.href=\'alt_doc.php?returnUrl=\'+T3_THIS_LOCATION+\'&edit[tx_t3events_domain_model_event][{settings.courseBackend.storagePid}]=new&defVals[tx_t3events_domain_model_event][tx_extbase_type]=Tx_T3eventsCourse_Course\'; return false;'}"
