--- a/Resources/Private/Templates/Backend/ScheduleBackend/List.html
+++ b/Resources/Private/Templates/Backend/ScheduleBackend/List.html
@@ -1,20 +1,27 @@
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xmlns:f="http://xsd.helmut-hummel.de/ns/TYPO3/CMS/Fluid/ViewHelpers">
 {namespace ts=Webfox\T3events\ViewHelpers}
-<f:layout name="Lessons" />
+<f:layout name="Default" />
+
+<f:comment>Content</f:comment>
 <f:section name="content">
 	<f:comment>
 		<f:debug inline="true">{filterOptions}</f:debug>
 		<f:debug inline="true">{performances}</f:debug>
 	</f:comment>
-	<h1>{f:translate(key: 'header.lessons', default: 'Lessons')}</h1>
-	<f:flashMessages renderMode="div" />
+	<h1>{f:translate(key: 'header.schedules')}</h1>
+
+    <f:comment>Search form</f:comment>
 	<f:render partial="Backend/Common/SearchForm"
 			  arguments="{overwriteDemand: overwriteDemand, filterOptions: filterOptions, showSubjectField: '{settings.participant.search.showSubjectField}'}" />
-	<f:if condition="{performances}">
+    <f:flashMessages renderMode="div" />
+
+    <f:comment>Paginated list</f:comment>
+    <f:if condition="{performances}">
 		<f:then>
 			<f:be.widget.paginate
 				objects="{performances}"
 				as="paginatedPerformances"
-				configuration="{itemsPerPage: 10, maximumNumberOfLinks: 10, recordsLabel: '{f:translate(key: \'label.lesson\', default: \'Lesson\')}'}"
+				configuration="{settings.scheduleBackend.list.paginate}"
 				>
 				<div class="panel panel-space panel-default recordlist">
 					<table class="table table-striped table-hover typo3-dblist ">
@@ -78,6 +85,8 @@
 			</f:be.widget.paginate>
 		</f:then>
 	</f:if>
-
-
 </f:section>
+
+<f:comment>Header buttons</f:comment>
+<f:section name="headerButtons" />
+
