--- a/Resources/Private/Templates/Backend/CourseBackend/List.html
+++ b/Resources/Private/Templates/Backend/CourseBackend/List.html
@@ -12,7 +12,7 @@
 
     <f:comment>Search form</f:comment>
     <f:render partial="Backend/Common/SearchForm"
-		arguments="{demand: '{demand}', overwriteDemand: '{overwriteDemand}', filterOptions: filterOptions, showSubjectField: '{settings.courseBackend.search.showSubjectField}'}" />
+		arguments="{demand: '{demand}', overwriteDemand: '{overwriteDemand}', filterOptions: '{filterOptions}', showSubjectField: '{settings.courseBackend.search.showSubjectField}'}" />
 	<f:flashMessages renderMode="div" />
 
     <f:comment>Paginated list</f:comment>
@@ -21,7 +21,7 @@
 			<f:be.widget.paginate
 				objects="{courses}"
 				as="paginatedCourses"
-				configuration="{settings.courseBackend.list.paginate}"
+				configuration="{settings.paginate}"
 				>
 				<div class="panel panel-space panel-default recordlist">
 					<table class="table table-striped table-hover typo3-dblist">
