[TASK] BREAKING! All controllers can now receive a merged array of TypoScript settings consisting of controller and action settings from TypoScript and settings from flexform. Some default TypoScript settings had to be moved. Please check whether your plugins/moduls still work as expected.

--- a/Resources/Private/Templates/Backend/CourseBackend/List.html
+++ b/Resources/Private/Templates/Backend/CourseBackend/List.html
@@ -12,7 +12,7 @@
 
     <f:comment>Search form</f:comment>
     <f:render partial="Backend/Common/SearchForm"
-		arguments="{demand: '{demand}', overwriteDemand: '{overwriteDemand}', filterOptions: '{filterOptions}', showSubjectField: '{settings.courseBackend.search.showSubjectField}'}" />
+		arguments="{demand: '{demand}', overwriteDemand: '{overwriteDemand}', filterOptions: '{filterOptions}', showSubjectField: '{settings.search.showSubjectField}'}" />
 	<f:flashMessages renderMode="div" />
 
     <f:comment>Paginated list</f:comment>
