[TASK] backend controllers list action now emits a signal before assigning template variables.

--- a/Resources/Private/Templates/Backend/CourseBackend/List.html
+++ b/Resources/Private/Templates/Backend/CourseBackend/List.html
@@ -4,7 +4,8 @@
 <f:section name="content">
 	<f:comment>
 		<f:debug title="demand">{demand}</f:debug>
-		<f:debug title="settings">{settings}</f:debug>
+		<f:debug title="settings" inline="true">{settings}</f:debug>
+		<f:debug title="filterOptions">{filterOptions}</f:debug>
 		<f:debug title="courses">{courses}</f:debug>
 	</f:comment>
 
