--- a/Resources/Private/Templates/Backend/CourseBackend/List.html
+++ b/Resources/Private/Templates/Backend/CourseBackend/List.html
@@ -1,99 +1,107 @@
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xmlns:f="http://xsd.helmut-hummel.de/ns/TYPO3/CMS/Fluid/ViewHelpers">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en"
+      xmlns:f="http://xsd.helmut-hummel.de/ns/TYPO3/CMS/Fluid/ViewHelpers">
 {namespace ts=Webfox\T3events\ViewHelpers}
-<f:layout name="Default" />
+<f:layout name="Default"/>
 <f:section name="content">
-	<f:comment>
-		<f:debug title="demand">{demand}</f:debug>
-		<f:debug title="settings" inline="true">{settings}</f:debug>
-		<f:debug title="filterOptions">{filterOptions}</f:debug>
-		<f:debug title="courses">{courses}</f:debug>
-	</f:comment>
+    <f:comment>
+        <f:debug title="demand">{demand}</f:debug>
+        <f:debug title="settings" inline="true">{settings}</f:debug>
+        <f:debug title="filterOptions">{filterOptions}</f:debug>
+        <f:debug title="courses">{courses}</f:debug>
+    </f:comment>
 
-	<h1>{f:translate(key: 'header.courses')}</h1>
+    <h1>{f:translate(key: 'header.courses')}</h1>
 
     <f:comment>Search form</f:comment>
     <f:render partial="Backend/Common/SearchForm"
-		arguments="{demand: '{demand}', overwriteDemand: '{overwriteDemand}', filterOptions: '{filterOptions}', showSubjectField: '{settings.search.showSubjectField}'}" />
-	<f:flashMessages renderMode="div" />
+              arguments="{demand: '{demand}', overwriteDemand: '{overwriteDemand}', filterOptions: '{filterOptions}', showSubjectField: '{settings.search.showSubjectField}'}"/>
+    <f:flashMessages renderMode="div"/>
 
     <f:comment>Paginated list</f:comment>
     <f:if condition="{courses}">
-		<f:then>
-			<f:be.widget.paginate
-				objects="{courses}"
-				as="paginatedCourses"
-				configuration="{settings.paginate}"
-				>
-				<div class="panel panel-space panel-default recordlist">
-					<table class="table table-striped table-hover typo3-dblist">
-						<thead>
-						<tr class="c-headline">
-							<th class="col-icon">ID</th>
-							<th class="col-title">{f:translate(key: 'label.title', default: 'Title')}</th>
-							<th class="col-control"></th>
-							<th>{f:translate(key: 'label.eventType', default: 'Event Type')}</th>
-							<th>{f:translate(key: 'label.genres', default: 'Genres')}</th>
-							<th>{f:translate(key: 'label.audience', default: 'Audience')}</th>
-						</tr>
-						</thead>
-						<f:for each="{paginatedCourses}" as="course">
-							<tr class="db_list_normal">
-								<td nowrap="nowrap">{course.uid}</td>
-								<td nowrap="nowrap">
-									<f:if condition="{f:cObject(typoscriptObjectPath: 'lib.compatVersion76')}">
-										<f:then>
-											<a href="#" class="t3-js-clickmenutrigger" data-table="tx_t3events_domain_model_event" data-uid="{course.uid}" data-listframe="0">
-												{course.headline}
-											</a>
-										</f:then>
-										<f:else>
-											<a href="" title="edit" onclick="window.location.href='alt_doc.php?returnUrl='+T3_THIS_LOCATION+'&edit[tx_t3events_domain_model_event][{course.uid}]=edit'; return false;">
-												{course.headline}
-											</a>
-										</f:else>
-									</f:if>
-								</td>
-								<td nowrap="nowrap" class="col-control">
-									<f:if condition="{f:cObject(typoscriptObjectPath: 'lib.compatVersion76')}">
-										<f:then>
-											<div
-												class="btn btn-default">
-												<f:be.buttons.icon
-													icon="actions-open"
-													title="UID: {course.uid}"
-													uri="{ts:be.editRecord(parameters:'edit[tx_t3events_domain_model_event][{course.uid}]=edit')}"
-													/>
-											</div>
-										</f:then>
-										<f:else>
-											<a href=""
-												onclick="window.location.href='alt_doc.php?returnUrl='+T3_THIS_LOCATION+'&edit[tx_t3events_domain_model_event][{course.uid}]=edit'; return false;">
-												<f:be.buttons.icon icon="actions-document-open" />
-											</a>
+        <f:then>
+            <f:be.widget.paginate
+                    objects="{courses}"
+                    as="paginatedCourses"
+                    configuration="{settings.paginate}"
+            >
+                <div class="panel panel-space panel-default recordlist">
+                    <table class="table table-striped table-hover typo3-dblist nowrap">
+                        <thead>
+                        <tr class="c-headline">
+                            <th class="col-icon">ID</th>
+                            <th class="col-title">{f:translate(key: 'label.title', default: 'Title')}</th>
+                            <th class="col-control"></th>
+                            <th>{f:translate(key: 'label.eventType', default: 'Event Type')}</th>
+                            <th>{f:translate(key: 'label.genres', default: 'Genres')}</th>
+                            <th>{f:translate(key: 'label.audience', default: 'Audience')}</th>
+                        </tr>
+                        </thead>
+                        <f:for each="{paginatedCourses}" as="course">
+                            <tr class="db_list_normal">
+                                <td nowrap="nowrap">{course.uid}</td>
+                                <td nowrap="nowrap">
+                                    <f:if condition="{f:cObject(typoscriptObjectPath: 'lib.compatVersion76')}">
+                                        <f:then>
+                                            <a href="#" class="t3-js-clickmenutrigger"
+                                               data-table="tx_t3events_domain_model_event" data-uid="{course.uid}"
+                                               data-listframe="0">
+                                                {course.headline}
+                                            </a>
+                                        </f:then>
+                                        <f:else>
+                                            <a href="" title="edit"
+                                               onclick="window.location.href='alt_doc.php?returnUrl='+T3_THIS_LOCATION+'&edit[tx_t3events_domain_model_event][{course.uid}]=edit'; return false;">
+                                                {course.headline}
+                                            </a>
+                                        </f:else>
+                                    </f:if>
+                                </td>
+                                <td nowrap="nowrap" class="col-control">
+                                    <f:if condition="{f:cObject(typoscriptObjectPath: 'lib.compatVersion76')}">
+                                        <f:then>
+                                            <div
+                                                    class="btn btn-default">
+                                                <f:be.buttons.icon
+                                                        icon="actions-open"
+                                                        title="UID: {course.uid}"
+                                                        uri="{ts:be.editRecord(parameters:'edit[tx_t3events_domain_model_event][{course.uid}]=edit')}"
+                                                />
+                                            </div>
+                                        </f:then>
+                                        <f:else>
+                                            <a href=""
+                                               onclick="window.location.href='alt_doc.php?returnUrl='+T3_THIS_LOCATION+'&edit[tx_t3events_domain_model_event][{course.uid}]=edit'; return false;">
+                                                <f:be.buttons.icon icon="actions-document-open"/>
+                                            </a>
 
-										</f:else>
-									</f:if>
-								</td>
-								<td nowrap="nowrap">{course.eventType.title}</td>
-								<td nowrap="nowrap">
-									<f:for each="{course.genre}" as="genre" iteration="genreIteration">{genre.title}{f:if(condition: '{genreIteration.isLast}', else: ', ')}</f:for>
-								</td>
-								<td nowrap="nowrap">
-									<f:for each="{course.audience}" as="audience" iteration="audienceIteration">{audience.title}{f:if(condition: '{audienceIteration.isLast}', else: ', ')}</f:for>
-								</td>
-							</tr>
-						</f:for>
-					</table>
-				</div>
-			</f:be.widget.paginate>
-		</f:then>
-	</f:if>
+                                        </f:else>
+                                    </f:if>
+                                </td>
+                                <td nowrap="nowrap">{course.eventType.title}</td>
+                                <td nowrap="nowrap">
+                                    <f:for each="{course.genre}" as="genre" iteration="genreIteration">
+                                        {genre.title}{f:if(condition: '{genreIteration.isLast}', else: ', ')}
+                                    </f:for>
+                                </td>
+                                <td nowrap="nowrap">
+                                    <f:for each="{course.audience}" as="audience" iteration="audienceIteration">
+                                        {audience.title}{f:if(condition: '{audienceIteration.isLast}', else: ', ')}
+                                    </f:for>
+                                </td>
+                            </tr>
+                        </f:for>
+                    </table>
+                </div>
+            </f:be.widget.paginate>
+        </f:then>
+    </f:if>
 </f:section>
 
 <f:comment>Header buttons</f:comment>
 <f:section name="headerButtons">
-	<f:be.buttons.icon uri="#"
-					   additionalAttributes="{onclick: 'window.location.href=\'alt_doc.php?returnUrl=\'+T3_THIS_LOCATION+\'&edit[tx_t3events_domain_model_event][{settings.courseBackend.storagePid}]=new&defVals[tx_t3events_domain_model_event][tx_extbase_type]=Tx_T3eventsCourse_Course\'; return false;'}"
-					   icon="actions-document-new"
-					   title="{f:translate(key: 'button.addCourse', default: 'add course')}" />
+    <f:be.buttons.icon uri="#"
+                       additionalAttributes="{onclick: 'window.location.href=\'alt_doc.php?returnUrl=\'+T3_THIS_LOCATION+\'&edit[tx_t3events_domain_model_event][{settings.courseBackend.storagePid}]=new&defVals[tx_t3events_domain_model_event][tx_extbase_type]=Tx_T3eventsCourse_Course\'; return false;'}"
+                       icon="actions-document-new"
+                       title="{f:translate(key: 'button.addCourse', default: 'add course')}"/>
 </f:section>
