--- a/Resources/Private/Templates/Backend/ScheduleBackend/Edit.html
+++ b/Resources/Private/Templates/Backend/ScheduleBackend/Edit.html
@@ -14,7 +14,7 @@ Otherwise your changes will be overwritten the next time you save the extension 
 <f:section name="content">
 	<h1>Reservierung bearbeiten</h1>
 
-	<f:flashMessages renderMode="div" />
+	<f:flashMessages />
 	<h3>Stornieren</h3>
 
 	<div class="button-group">
