--- a/Resources/Private/Templates/Lesson/Filter.html
+++ b/Resources/Private/Templates/Lesson/Filter.html
@@ -14,7 +14,7 @@ This Template is responsible for creating a list of lessons.
 		<f:debug title="eventTypes">{eventTypes}</f:debug>
 	</f:if>
 	<div class="lesson-filter">
-		<f:flashMessages renderMode="div" />
+		<f:flashMessages />
 		<f:form
 			action="list"
 			name="overwriteDemand"
