--- a/Resources/Private/Templates/Lesson/Show.html
+++ b/Resources/Private/Templates/Lesson/Show.html
@@ -6,7 +6,7 @@ This Template is responsible for displaying a single lesson.
 		<f:debug title="lesson">{lesson}</f:debug>
 	</f:if>
 	<div class="lesson-single">
-		<f:flashMessages renderMode="div" />
+		<f:flashMessages />
 		<div class="infosDate lessonItemContainer">
 			<f:format.date format="%d.%m.%Y">{lesson.date}</f:format.date>
 			,&nbsp;
