[BUGFIX] use correct section name 'main' in templates.

--- a/Resources/Private/Templates/Backend/ScheduleBackend/Edit.html
+++ b/Resources/Private/Templates/Backend/ScheduleBackend/Edit.html
@@ -11,7 +11,7 @@ Edit.html: keep
 
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
-<f:section name="content">
+<f:section name="main">
 	<h1>Reservierung bearbeiten</h1>
 
 	<f:flashMessages />
