--- a/Resources/Private/Templates/Backend/ScheduleBackend/List.html
+++ b/Resources/Private/Templates/Backend/ScheduleBackend/List.html
@@ -4,7 +4,7 @@
 <f:layout name="Default"/>
 
 <f:comment>Content</f:comment>
-<f:section name="content">
+<f:section name="main">
     <f:comment>
         <f:debug inline="true">{filterOptions}</f:debug>
         <f:debug inline="true">{performances}</f:debug>
