--- a/Resources/Private/Templates/Backend/ScheduleBackend/New.html
+++ b/Resources/Private/Templates/Backend/ScheduleBackend/New.html
@@ -11,7 +11,7 @@ New.html: keep
 
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
-<f:section name="content">
+<f:section name="main">
 	<h1>New Reservation</h1>
 
 	<f:flashMessages />
