--- a/Resources/Private/Layouts/Backend/Course.html
+++ b/Resources/Private/Layouts/Backend/Course.html
@@ -25,7 +25,7 @@
 		</div>
 		<div id="typo3-docbody">
 			<div id="typo3-inner-docbody">
-				<f:render section="content" />
+				<f:render section="main" />
 			</div>
 		</div>
 	</div>
