--- a/Resources/Private/Templates/Backend/ScheduleBackend/List.html
+++ b/Resources/Private/Templates/Backend/ScheduleBackend/List.html
@@ -14,7 +14,7 @@
     <f:comment>Search form</f:comment>
     <f:render partial="Backend/Common/SearchForm"
               arguments="{overwriteDemand: overwriteDemand, filterOptions: filterOptions, showSubjectField: '{settings.search.showSubjectField}'}"/>
-    <f:flashMessages />
+    <f:flashMessages/>
 
     <f:comment>Paginated list</f:comment>
     <f:if condition="{performances}">
@@ -25,7 +25,7 @@
                     configuration="{settings.paginate}"
             >
                 <div class="panel panel-space panel-default recordlist">
-                    <table class="table table-striped table-hover typo3-dblist nowrap ">
+                    <table class="table table-striped table-hover typo3-dblist ">
                         <thead>
                         <tr class="c-headline">
                             <th class="col-icon">ID</th>
@@ -44,45 +44,19 @@
                                     <f:format.date format="d.m.Y">{lesson.date}</f:format.date>
                                 </td>
                                 <td nowrap="nowrap">
-                                    <f:if condition="{f:cObject(typoscriptObjectPath: 'lib.compatVersion76')}">
-                                        <f:then>
-                                            <a href="#" class="t3-js-clickmenutrigger"
-                                               data-table="tx_t3events_domain_model_performance" data-uid="{lesson.uid}"
-                                               data-listframe="0">
-                                                {lesson.event.headline}
-                                            </a>
-                                        </f:then>
-                                        <f:else>
-                                            <a href="" title="edit"
-                                               onclick="window.location.href='alt_doc.php?returnUrl='+T3_THIS_LOCATION+'&edit[tx_t3events_domain_model_performance][{lesson.uid}]=edit'; return false;">
-                                                {lesson.event.headline}
-                                            </a>
-                                        </f:else>
-                                    </f:if>
+                                    <a class="action-open"
+                                       title="Edit"
+                                       href="{ts:be.editRecord(parameters:'edit[tx_t3events_domain_model_performance][{lesson.uid}]=edit&moduleName=Events_T3eventsCourseM2')}">{lesson.event.headline}</a>
                                 </td>
                                 <td nowrap="nowrap">{lesson.eventLocation.name}</td>
                                 <td nowrap="nowrap">{lesson.event.eventType.title}</td>
                                 <td nowrap="nowrap">{lesson.status.title}</td>
                                 <td nowrap="nowrap">
-                                    <f:if condition="{f:cObject(typoscriptObjectPath: 'lib.compatVersion76')}">
-                                        <f:then>
-                                            <div
-                                                    class="btn btn-default">
-                                                <f:be.buttons.icon
-                                                        icon="actions-open"
-                                                        title="UID: {lesson.uid}"
-                                                        uri="{ts:be.editRecord(parameters:'edit[tx_t3events_domain_model_performance][{lesson.uid}]=edit')}"
-                                                />
-                                            </div>
-                                        </f:then>
-                                        <f:else>
-                                            <a href=""
-                                               onclick="window.location.href='alt_doc.php?returnUrl='+T3_THIS_LOCATION+'&edit[tx_t3events_domain_model_performance][{lesson.uid}]=edit'; return false;">
-                                                <f:be.buttons.icon icon="actions-document-open"/>
-                                            </a>
-
-                                        </f:else>
-                                    </f:if>
+                                    <div class="btn btn-default">
+                                        <a class="action-open"
+                                           title="Edit"
+                                           href="{ts:be.editRecord(parameters:'edit[tx_t3events_domain_model_performance][{lesson.uid}]=edit&moduleName=Events_T3eventsCourseM2')}">Edit</a>
+                                    </div>
                                 </td>
                             </tr>
                         </f:for>
